# netlink

./: CMakeLists.txt  README.md  auto_format.sh  client.cpp  server.cpp
client/: app.cpp  client.cpp  client.hpp
kernel_module/: Makefile  README.md  calc_module.c
server/: app.cpp  server.cpp  server.hpp
tests/: test.cpp
